# pngpal2raw

./: .cproject  .project  Makefile  Makefile.am  README.md  configure.ac  version.mk
.github/workflows/: build-i386.yaml  build.yaml
bflibrary/include/: bffile.h  bfmemut.h  bftypes.h  privbflog.h
docs/: pngpal2raw_readme.txt
res/: color_tbl_landview.txt  landvico_stdres.rc  pngpal2raw_stdres.rc
src/: ci_string.hpp  config.h.in  imagedata.cpp  imagedata.h  imagedata.hpp  landvico.c  landvico_version.h  pngpal2raw.cpp  pngpal2raw_ver.h  pngpal2raw_version.h  prog_options.h  prog_options.hpp
